package progra2.utn.uml.domain.impuesto;

public class Contribuyente {
}
